--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,6 +53,10 @@ red">
     100*100px
   </div>
 
+  <div class="test-box rounded">
+    100*100px
+  </div>
+
   <div class="root">
     this is the root of this block and is design with a fontsize of 16px in mind
     <div class="nested">this is nested in a block and is design with a fontsize of 16px in mind</div>
