--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -5,6 +5,11 @@
   background-color: orange;
   @include size('width', 100);
   @include size('height', 100);
+
+  &.rounded {
+    @include size('border-radius', 10);
+    @include size('padding', 3);
+  }
 }
 
 .red {
